test/framework/ressources/mtls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meow
  namespace: mtls-routes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meow
  template:
    metadata:
      labels:
        app: meow
    spec:
      containers:
      - name: meow
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        ports:
        - containerPort: 8080
