test/framework/ressources/mtls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "mtls-routes/my-certs"
  name: meow-ingress
  namespace: mtls-routes
spec:
  rules:
  - host: meow.alster.co.il
    http:
      paths:
      - backend:
          serviceName: meow-svc
          servicePort: 80
        path: /
  tls:
  - hosts:
    - meow.alster.co.il
    secretName: my-certs
